# travel-agenda

./: .gitignore  README.md  pyproject.toml  settings.yaml
.github/workflows/: deploy.yml
travel/: cli.py  parser.py  renderer.py  server.py
travel/templates/: _activity.html.j2  agenda.html.j2  index.html.j2
trips/: berlin-2026.yaml  example.yaml  munich-2026.yaml  south-korea-2026.yaml
